--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             audio.play();
             
     
-            alert('Gracias bb, sabía que dirias que si. Entra que pa luego es tarde :3         ATT: Eskin Montiel  (Da clic en aceptar -->)');
+            alert('Sabía que dirias que si bb. Entra que pa luego es tarde :3  ATT: Eskin Montiel  (Da clic en aceptar -->)');
         }
     </script>
 </head>
