--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             var audio = new Audio('medios/audio1.mp3');
             audio.play();
             
-    
             alert('Gracias bb, sabía que dirias que si. Entra que pa luego es tarde :3  ATT: Eskin Montiel  (Da clic en aceptar -->)');
+            document.querySelector('.titulo h1').style.display = 'none';
         }
     </script>
 </head>
